[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpwan-simulator"
version = "0.1.0"
description = "LPWAN wireless environment simulator with signal propagation, SNR analysis, and heatmap visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "mypy"]

[tool.setuptools.packages.find]
include = ["lpwan_sim*"]
